--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,9 +10,19 @@
         .text-shadow-sm-red {
             text-shadow:  0 0 3px rgb(250, 67, 127);
         }
+        .text-shadow-sm-orange {
+            text-shadow:  0 0 3px #fd8c46;
+        }
+        .text-shadow-sm-orange-red {
+            text-shadow:  0 0 3px #fa502c;
+        }
         .text-shadow-sm-blue {
             text-shadow:  0 0 3px rgb(155, 249, 249);
         }
+    }
+
+    .font-monoton {
+        font-family: Monoton;
     }
 }
 
@@ -21,6 +31,23 @@
     input[type=number]::-webkit-outer-spin-button {
         -webkit-appearance: none;
         margin: 0;
+    }
+    input::-webkit-contacts-auto-fill-button {
+        background-color: #fff;
+    }
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus,
+    textarea:-webkit-autofill,
+    textarea:-webkit-autofill:hover,
+    textarea:-webkit-autofill:focus,
+    select:-webkit-autofill,
+    select:-webkit-autofill:hover,
+    select:-webkit-autofill:focus {
+        border: 1px solid #FFD763;
+        -webkit-text-fill-color: white;
+        -webkit-box-shadow: 0 0 0 0 #000 inset;
+        transition: background-color 5000s ease-in-out 0s;
     }
 }
 
